[ci skip] Format and fix cell markers 8c2d6d3ee6d62020f7bf2e32578be86da51e7c7a

--- a/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93947b51",
+   "id": "fa15d61f",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -42,10 +42,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a29f8fbf",
+   "id": "632b48c2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from time import perf_counter\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -116,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb9d3926",
+   "id": "7bcdfda8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "815a54fa",
+   "id": "e37c9b16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,6 @@
     "from sklearn.preprocessing import SplineTransformer, PolynomialFeatures\n",
     "from sklearn.kernel_approximation import Nystroem\n",
     "from mlforecast.lag_transforms import (\n",
-    "    Combine,\n",
     "    RollingMax,\n",
     "    RollingMin,\n",
     "    RollingMean,\n",
@@ -166,10 +166,16 @@
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning, module=\"sklearn\")\n",
     "\n",
     "\n",
+    "# MLForecast can train multiple models in parallel, each model can be a\n",
+    "# pipeline of transformers and a regressor. However we focus on a single\n",
+    "# HistGradientBoostingRegressor model to make sure that this notebook runs\n",
+    "# quickly enough. Feel free to uncomment the other models to compare their\n",
+    "# performance if you have enough time and memory available.\n",
+    "#\n",
+    "# Spoiler alert: the HistGradientBoostingRegressor model is the most accurate.\n",
+    "\n",
     "mlf = MLForecast(\n",
     "    models=[\n",
-    "        # Ridge(alpha=1e-6),\n",
-    "        # make_pipeline(SplineTransformer(), Ridge(alpha=1e-6)),\n",
     "        # make_pipeline(\n",
     "        #     SplineTransformer(sparse_output=True, n_knots=10),\n",
     "        #     PolynomialFeatures(degree=2, include_bias=False, interaction_only=True),\n",
@@ -213,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd4158bc",
+   "id": "d952badb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,86 +227,198 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "965b9f3d",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "36b4e359",
+   "metadata": {},
    "source": [
-    "PREDICTION_HORIZON = SEGMENT_LENGTH * 2"
+    "\n",
+    "## Recursive or auto-regressive forecasting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cbdc266",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "# mlf.fit(data_train, max_horizon=PREDICTION_HORIZON, **schema) # direct forecasting\n",
-    "mlf.fit(data_train, **schema)  # recursive forecasting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6809ccec",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "test_offset = 0\n",
-    "\n",
-    "all_predictions = []\n",
-    "UPDATE_CHUNK_SIZE = 5\n",
-    "while test_offset < len(data_test):\n",
-    "\n",
-    "    new_predictions = mlf.predict(PREDICTION_HORIZON)\n",
-    "    all_predictions.append(new_predictions)\n",
-    "\n",
-    "    # Update the forecaster with the new observations\n",
-    "    mlf.update(data_test.iloc[test_offset : test_offset + UPDATE_CHUNK_SIZE])\n",
-    "    test_offset += UPDATE_CHUNK_SIZE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8a63034",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": [
-    "nrows = 12\n",
-    "fig, axes = plt.subplots(nrows=nrows, figsize=(15, 5 * nrows))\n",
-    "for row_idx, predictions in enumerate(all_predictions):\n",
-    "    merged_data = data_test.copy()\n",
-    "    merged_data = merged_data.merge(predictions, on=[\"time\", \"series_id\"], how=\"left\")\n",
-    "\n",
-    "    merged_data.drop([\"series_id\"], axis=1).iloc[: SEGMENT_LENGTH * 3].plot(\n",
-    "        x=\"time\", ax=axes[row_idx]\n",
-    "    )\n",
-    "    axes[row_idx].set_ylim(-1.2, 1.2)\n",
-    "\n",
-    "    if row_idx >= nrows - 1:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d638b11",
+   "id": "8d3860ab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tic = perf_counter()\n",
+    "mlf.fit(data_train, **schema)  # recursive forecasting by default in mlforecast\n",
+    "print(f\"Recursive forecasting training time: {perf_counter() - tic:.1f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb42f8a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PREDICTION_HORIZON = SEGMENT_LENGTH * 2\n",
+    "\n",
+    "\n",
+    "def collect_predictions(mlf, data_test, test_offset=0):\n",
+    "    \"\"\"Collect predictions from the MLForecast object.\"\"\"\n",
+    "    all_predictions = []\n",
+    "    UPDATE_CHUNK_SIZE = 5\n",
+    "    while test_offset < len(data_test):\n",
+    "\n",
+    "        new_predictions = mlf.predict(PREDICTION_HORIZON)\n",
+    "        new_predictions[\"horizon\"] = np.arange(new_predictions.shape[0]) + 1\n",
+    "        new_predictions = new_predictions.merge(\n",
+    "            data_test, on=[\"time\", \"series_id\"], how=\"left\"\n",
+    "        )\n",
+    "        all_predictions.append(new_predictions)\n",
+    "\n",
+    "        # Update the forecaster with the new observations\n",
+    "        mlf.update(data_test.iloc[test_offset : test_offset + UPDATE_CHUNK_SIZE])\n",
+    "        test_offset += UPDATE_CHUNK_SIZE\n",
+    "\n",
+    "    return all_predictions\n",
+    "\n",
+    "\n",
+    "tic = perf_counter()\n",
+    "all_recursive_predictions = collect_predictions(mlf, data_test)\n",
+    "print(f\"Recursive forecasting prediction time: {perf_counter() - tic:.1f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2cf4b8e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Direct forecasting\n",
+    "\n",
+    "Let's pass `max_horizon` to force modeling for direct forecasting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a48de910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tic = perf_counter()\n",
+    "mlf.fit(data_train, max_horizon=PREDICTION_HORIZON, **schema)\n",
+    "print(f\"Direct forecasting training time: {perf_counter() - tic:.1f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "728a512a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tic = perf_counter()\n",
+    "all_direct_predictions = collect_predictions(mlf, data_test)\n",
+    "print(f\"Direct forecasting prediction time: {perf_counter() - tic:.1f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7215fdab",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "source": [
+    "\n",
+    "## Quantitative comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f89a1b9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score_predictions(all_predictions, model_name):\n",
+    "    \"\"\"Compute the mean absolute error of the predictions.\"\"\"\n",
+    "    all_predictions = pd.concat(all_predictions)\n",
+    "    all_predictions[\"absolute_error\"] = np.abs(\n",
+    "        all_predictions[\"y\"] - all_predictions[model_name]\n",
+    "    )\n",
+    "    return all_predictions.dropna().groupby(\"horizon\")\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "score_predictions(\n",
+    "    all_recursive_predictions, \"HistGradientBoostingRegressor\"\n",
+    ").mean().reset_index().plot(x=\"horizon\", y=\"absolute_error\", label=\"recursive\", ax=ax)\n",
+    "score_predictions(\n",
+    "    all_direct_predictions, \"HistGradientBoostingRegressor\"\n",
+    ").mean().reset_index().plot(x=\"horizon\", y=\"absolute_error\", label=\"direct \", ax=ax)\n",
+    "_ = ax.set(ylabel=\"MAE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbd84ca2",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "source": [
+    "\n",
+    "## Qualitative comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "073b208f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_some_predictions(all_predictions, data_test, model_name, nrows=12, title=None):\n",
+    "\n",
+    "    fig, axes = plt.subplots(nrows=nrows, figsize=(15, 5 * nrows))\n",
+    "    for row_idx, predictions in enumerate(all_predictions):\n",
+    "        predictions = predictions.drop(\"y\", axis=1)\n",
+    "        merged_data = data_test.copy()\n",
+    "        merged_data = merged_data.merge(\n",
+    "            predictions, on=[\"time\", \"series_id\"], how=\"left\"\n",
+    "        )\n",
+    "        merged_data.drop([\"series_id\"], axis=1).iloc[: SEGMENT_LENGTH * 3].plot(\n",
+    "            x=\"time\", y=[\"y\", model_name], ax=axes[row_idx]\n",
+    "        )\n",
+    "        axes[row_idx].set_title(title)\n",
+    "        axes[row_idx].set_ylim(-1.2, 1.2)\n",
+    "\n",
+    "        if row_idx >= nrows - 1:\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3fd7c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_some_predictions(\n",
+    "    all_recursive_predictions,\n",
+    "    data_test,\n",
+    "    \"HistGradientBoostingRegressor\",\n",
+    "    title=\"recursive\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb6a4be8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_some_predictions(\n",
+    "    all_direct_predictions, data_test, \"HistGradientBoostingRegressor\", title=\"direct\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
