--- a/_sources/content/notebooks/multiple_horizons_prediction.ipynb
+++ b/_sources/content/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97581a1e",
+   "id": "1f113a20",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cbd5ea1",
+   "id": "36bcff3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce804535",
+   "id": "fa0a2706",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -41,6 +41,7 @@
     "\n",
     "import altair\n",
     "import cloudpickle\n",
+    "import pyarrow  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import plot_horizon_forecast\n",
     "\n",
@@ -51,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00018563",
+   "id": "48f0bc5b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee36010",
+   "id": "0c38bfc5",
    "metadata": {},
    "source": [
     "\n",
@@ -92,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c7f755b",
+   "id": "2a2b9a46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8477b83c",
+   "id": "cd7f72d1",
    "metadata": {},
    "source": [
     "\n",
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3426fbcd",
+   "id": "930b4f7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d0df993",
+   "id": "6d78b889",
    "metadata": {},
    "source": [
     "\n",
@@ -146,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c04b7d58",
+   "id": "76487ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b33106",
+   "id": "e348bbe5",
    "metadata": {},
    "source": [
     "\n",
@@ -184,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32d7e4b",
+   "id": "b818511b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0f7b2e5",
+   "id": "9af2228b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6993643",
+   "id": "8b53cb74",
    "metadata": {},
    "source": [
     "\n",
@@ -248,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa6b27c",
+   "id": "9ba389cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a0ff83",
+   "id": "d367f298",
    "metadata": {},
    "source": [
     "\n",
@@ -268,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c2f9b09",
+   "id": "2b6620e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e401e3",
+   "id": "2c4ec5f5",
    "metadata": {},
    "source": [
     "\n",
@@ -344,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbaac21b",
+   "id": "de56adfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b6e196f",
+   "id": "2542cec1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1ef60df",
+   "id": "03aa5e87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132e786a",
+   "id": "c218f56e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e45cf1bb",
+   "id": "bc404437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45988e13",
+   "id": "131e0e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e845e3",
+   "id": "f74f4f6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b2c8f4",
+   "id": "af3def65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb301f7",
+   "id": "543d9dd4",
    "metadata": {},
    "source": [
     "\n",
