--- a/_sources/content/notebooks/prediction_intervals.ipynb
+++ b/_sources/content/notebooks/prediction_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05be42c0",
+   "id": "148ffb34",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b48a9c",
+   "id": "d7d3cc84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c92d57e",
+   "id": "3a5805f5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -38,10 +38,11 @@
    "source": [
     "import warnings\n",
     "\n",
-    "import polars as pl\n",
     "import altair\n",
     "import cloudpickle\n",
     "import numpy as np\n",
+    "import pyarrow  # noqa: F401\n",
+    "import polars as pl\n",
     "\n",
     "from tutorial_helpers import (\n",
     "    binned_coverage,\n",
@@ -58,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b2ef1e7",
+   "id": "87a77817",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0bd78c",
+   "id": "094a5c46",
    "metadata": {},
    "source": [
     "### Define the quantile regressors\n",
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e8d119",
+   "id": "91515841",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c385cf0d",
+   "id": "03f8a170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33035b5a",
+   "id": "f21b0c7e",
    "metadata": {},
    "source": [
     "\n",
@@ -142,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fb52470",
+   "id": "9136ce88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,88 +169,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a8836b",
+   "id": "abcc5057",
    "metadata": {},
    "source": [
-    "\n",
-    "Now, let's make a plot of the predictions for each model and thus we need to gather\n",
-    "all the predictions in a single dataframe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0165438e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = pl.concat(\n",
-    "    [\n",
-    "        targets.skb.select(cols=[\"prediction_time\", target_column_name]).skb.preview(),\n",
-    "        predictions_hgbr_05.rename({target_column_name: \"quantile_05\"}).skb.preview(),\n",
-    "        predictions_hgbr_50.rename({target_column_name: \"median\"}).skb.preview(),\n",
-    "        predictions_hgbr_95.rename({target_column_name: \"quantile_95\"}).skb.preview(),\n",
-    "    ],\n",
-    "    how=\"horizontal\",\n",
-    ").tail(24 * 7)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "518c9939",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Now, we plot the observed values and the predicted median with a line. In addition,\n",
-    "we plot the 5th and 95th percentiles as a shaded area. It means that between those\n",
-    "two bounds, we expect to find 90% of the observed values.\n",
-    "\n",
-    "We plot this information on a portion of the training data to observe the uncertainty\n",
-    "quantification of the predictions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a50b82e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "median_chart = (\n",
-    "    altair.Chart(results)\n",
-    "    .transform_fold([target_column_name, \"median\"])\n",
-    "    .mark_line(tooltip=True)\n",
-    "    .encode(x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\")\n",
-    ")\n",
-    "\n",
-    "# Add a column for the band legend\n",
-    "results_with_band = results.with_columns(pl.lit(\"90% interval\").alias(\"band_type\"))\n",
-    "\n",
-    "quantile_band_chart = (\n",
-    "    altair.Chart(results_with_band)\n",
-    "    .mark_area(opacity=0.4, tooltip=True)\n",
-    "    .encode(\n",
-    "        x=\"prediction_time:T\",\n",
-    "        y=\"quantile_05:Q\",\n",
-    "        y2=\"quantile_95:Q\",\n",
-    "        color=altair.Color(\"band_type:N\", scale=altair.Scale(range=[\"lightgreen\"])),\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "combined_chart = quantile_band_chart + median_chart\n",
-    "combined_chart.resolve_scale(color=\"independent\").interactive()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62d1bc14",
-   "metadata": {},
-   "source": [
-    "\n",
-    "While we should expend this plot on the test data and on several portions of the\n",
-    "dataset, we observe a potential interesting pattern: during the week days, the\n",
-    "5th percentile is further from the median than during the weekend. However, for the\n",
-    "95th percentile, the opposite is observed.\n",
     "\n",
     "### Evaluation via cross-validation\n",
     "\n",
@@ -259,17 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "484a3f55",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "420ff986",
+   "id": "9b846af2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da760fb6",
+   "id": "963b3b0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,60 +227,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5232a75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_results_hgbr_05[\n",
-    "    [col for col in cv_results_hgbr_05.columns if col.startswith(\"test_\")]\n",
-    "].mean(axis=0).round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72461d09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_results_hgbr_50[\n",
-    "    [col for col in cv_results_hgbr_50.columns if col.startswith(\"test_\")]\n",
-    "].mean(axis=0).round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d77b83e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_results_hgbr_95[\n",
-    "    [col for col in cv_results_hgbr_95.columns if col.startswith(\"test_\")]\n",
-    "].mean(axis=0).round(3)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "a6adefc5",
+   "id": "7568bc0c",
    "metadata": {},
    "source": [
     "\n",
-    "Focusing on the different D2 scores, we observe that each model minimize the D2 score\n",
-    "associated to the target quantile that we set. For instance, the model predicting the\n",
-    "5th percentile obtained the highest D2 pinball score with `alpha=0.05`. It is expected\n",
-    "but a confirmation of what loss each model minimizes.\n",
-    "\n",
-    "Now, let's collect the cross-validated predictions and plot the residual vs predicted\n",
-    "values for the different models."
+    "Let's first collect all the cross-validated predictions to make further inspection."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ead3c234",
+   "id": "170a9623",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,9 +254,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7911c0e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Now, let's make a plot of the predictions for each model and thus we need to gather\n",
+    "all the predictions in a single dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac5f98f",
+   "id": "c4a8b0dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pl.concat(\n",
+    "    [\n",
+    "        cv_predictions_hgbr_05[0].rename({\"predicted_load_mw\": \"predicted_load_mw_05\"}),\n",
+    "        cv_predictions_hgbr_50[0].select(\"predicted_load_mw\").rename(\n",
+    "            {\"predicted_load_mw\": \"predicted_load_mw_50\"}\n",
+    "        ),\n",
+    "        cv_predictions_hgbr_95[0].select(\"predicted_load_mw\").rename(\n",
+    "            {\"predicted_load_mw\": \"predicted_load_mw_95\"}\n",
+    "        ),\n",
+    "    ],\n",
+    "    how=\"horizontal\",\n",
+    ").tail(24 * 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5254969c",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Now, we plot the observed values and the predicted median with a line. In addition,\n",
+    "we plot the 5th and 95th percentiles as a shaded area. It means that between those\n",
+    "two bounds, we expect to find 90% of the observed values.\n",
+    "\n",
+    "We plot this information on a portion of the test data from the first fold of the\n",
+    "cross-validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5eb888f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_chart = (\n",
+    "    altair.Chart(results)\n",
+    "    .transform_fold([\"load_mw\", \"predicted_load_mw_50\"])\n",
+    "    .mark_line(tooltip=True)\n",
+    "    .encode(x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\")\n",
+    ")\n",
+    "\n",
+    "# Add a column for the band legend\n",
+    "results_with_band = results.with_columns(pl.lit(\"90% interval\").alias(\"band_type\"))\n",
+    "\n",
+    "quantile_band_chart = (\n",
+    "    altair.Chart(results_with_band)\n",
+    "    .mark_area(opacity=0.4, tooltip=True)\n",
+    "    .encode(\n",
+    "        x=\"prediction_time:T\",\n",
+    "        y=\"predicted_load_mw_05:Q\",\n",
+    "        y2=\"predicted_load_mw_95:Q\",\n",
+    "        color=altair.Color(\"band_type:N\", scale=altair.Scale(range=[\"lightgreen\"])),\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "combined_chart = quantile_band_chart + median_chart\n",
+    "combined_chart.resolve_scale(color=\"independent\").interactive()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35c71bd8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Now, we can inspect the cross-validated metrics for each model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed1ae07b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results_hgbr_05[\n",
+    "    [col for col in cv_results_hgbr_05.columns if col.startswith(\"test_\")]\n",
+    "].mean(axis=0).round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69061cdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results_hgbr_50[\n",
+    "    [col for col in cv_results_hgbr_50.columns if col.startswith(\"test_\")]\n",
+    "].mean(axis=0).round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6f29570",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results_hgbr_95[\n",
+    "    [col for col in cv_results_hgbr_95.columns if col.startswith(\"test_\")]\n",
+    "].mean(axis=0).round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a06d624",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Focusing on the different D2 scores, we observe that each model minimize the D2 score\n",
+    "associated to the target quantile that we set. For instance, the model predicting the\n",
+    "5th percentile obtained the highest D2 pinball score with `alpha=0.05`. It is expected\n",
+    "but a confirmation of what loss each model minimizes.\n",
+    "\n",
+    "Now, let's collect the cross-validated predictions and plot the residual vs predicted\n",
+    "values for the different models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b829a1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d91631",
+   "id": "9bf7a4bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d220ebe3",
+   "id": "47e70363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70e32a86",
+   "id": "ea8c3e8d",
    "metadata": {},
    "source": [
     "\n",
@@ -442,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5271601",
+   "id": "8e9df277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f2ae54",
+   "id": "67e07c35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f48b87",
+   "id": "6aa78d71",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -509,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769dd22d",
+   "id": "3e4a1d34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90964e5b",
+   "id": "29c5e4cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6193a61",
+   "id": "38a96821",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "579f5394",
+   "id": "e3c0114b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "262bd410",
+   "id": "a719a261",
    "metadata": {},
    "source": [
     "\n",
@@ -586,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd20b92",
+   "id": "088e0941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f35469d3",
+   "id": "86b66a14",
    "metadata": {},
    "source": [
     "\n",
@@ -611,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a823e023",
+   "id": "7fa5ff25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab6658df",
+   "id": "d88bf6f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28212bfb",
+   "id": "c8dce0e4",
    "metadata": {},
    "source": [
     "\n",
@@ -656,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "523cda55",
+   "id": "c950a652",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95dafb29",
+   "id": "3a5c9653",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b75f5e14",
+   "id": "12e2bdf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a669489",
+   "id": "58774300",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cab27bb",
+   "id": "9f05a1bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c33a6a61",
+   "id": "46e14d2d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -735,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19a59b7",
+   "id": "de18c17d",
    "metadata": {},
    "source": [
     "\n",
@@ -773,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa3d9c4",
+   "id": "88477a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e507162f",
+   "id": "d2cc1ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d0262ac",
+   "id": "cc0bdd23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5f6f115",
+   "id": "20206942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961003ed",
+   "id": "f9305cda",
    "metadata": {
     "title": "[markdown"
    },
@@ -972,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "789cbe01",
+   "id": "63cd83ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcd30d2e",
+   "id": "eca132a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58dbddb",
+   "id": "698ee88c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4cf6e2",
+   "id": "22988e6e",
    "metadata": {},
    "source": [
     "\n",
@@ -1024,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f9aab02",
+   "id": "feb2cbd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d1c931c",
+   "id": "2f8e1b5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7acdfe5",
+   "id": "af1081e7",
    "metadata": {},
    "outputs": [],
    "source": [
