--- a/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
+++ b/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87629230",
+   "id": "54bb5b41",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b683d8d2",
+   "id": "0a0c91ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4681ae0",
+   "id": "4eaf28ed",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -41,6 +41,7 @@
     "\n",
     "import altair\n",
     "import cloudpickle\n",
+    "import pyarrow  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import plot_horizon_forecast\n",
     "\n",
@@ -51,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433452f6",
+   "id": "2f8e1329",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55d0444",
+   "id": "9d2f8f7d",
    "metadata": {},
    "source": [
     "\n",
@@ -92,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e26835e",
+   "id": "52ed8c9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dc77e6f",
+   "id": "4bb07c7d",
    "metadata": {},
    "source": [
     "\n",
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec1d6ddf",
+   "id": "b2cef455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c5c3d52",
+   "id": "5546b369",
    "metadata": {},
    "source": [
     "\n",
@@ -146,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168cc0b6",
+   "id": "1b5d7e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc4f084",
+   "id": "a50bc5d8",
    "metadata": {},
    "source": [
     "\n",
@@ -184,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d2f5d3",
+   "id": "721dba51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c397d2",
+   "id": "0e464e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b21c4f49",
+   "id": "c0aaa3e4",
    "metadata": {},
    "source": [
     "\n",
@@ -248,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97314f6a",
+   "id": "ee082686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e01b5691",
+   "id": "17048910",
    "metadata": {},
    "source": [
     "\n",
@@ -268,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3aebbbb",
+   "id": "98746dd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "791385a5",
+   "id": "cfd9e3ae",
    "metadata": {},
    "source": [
     "\n",
@@ -344,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c977ca93",
+   "id": "05656fdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5196243c",
+   "id": "b19ace83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0cd3f4",
+   "id": "a8951686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74c81b0b",
+   "id": "8b641fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fbe9dea",
+   "id": "6f37720c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b56fb7",
+   "id": "ab97c1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b8bd25e",
+   "id": "0412da29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85ea6fbb",
+   "id": "61a0f2d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f61de7a3",
+   "id": "60ce9b74",
    "metadata": {},
    "source": [
     "\n",
