--- a/jupyterlite/files/notebooks/prediction_intervals.ipynb
+++ b/jupyterlite/files/notebooks/prediction_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ee1f287",
+   "id": "91365742",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "397e9319",
+   "id": "ed94d58b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad5c6e05",
+   "id": "9afcd5b8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -38,10 +38,11 @@
    "source": [
     "import warnings\n",
     "\n",
-    "import polars as pl\n",
     "import altair\n",
     "import cloudpickle\n",
     "import numpy as np\n",
+    "import pyarrow  # noqa: F401\n",
+    "import polars as pl\n",
     "\n",
     "from tutorial_helpers import (\n",
     "    binned_coverage,\n",
@@ -58,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceca13b3",
+   "id": "d254de1a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e30e996",
+   "id": "a28824d7",
    "metadata": {},
    "source": [
     "### Define the quantile regressors\n",
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abad5310",
+   "id": "9206319f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b7f2f7",
+   "id": "3c14cda1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90044c49",
+   "id": "8adb5d68",
    "metadata": {},
    "source": [
     "\n",
@@ -142,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b87e3c",
+   "id": "9032a622",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,88 +169,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c51f513",
+   "id": "e09b39c5",
    "metadata": {},
    "source": [
-    "\n",
-    "Now, let's make a plot of the predictions for each model and thus we need to gather\n",
-    "all the predictions in a single dataframe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "794dec4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = pl.concat(\n",
-    "    [\n",
-    "        targets.skb.select(cols=[\"prediction_time\", target_column_name]).skb.preview(),\n",
-    "        predictions_hgbr_05.rename({target_column_name: \"quantile_05\"}).skb.preview(),\n",
-    "        predictions_hgbr_50.rename({target_column_name: \"median\"}).skb.preview(),\n",
-    "        predictions_hgbr_95.rename({target_column_name: \"quantile_95\"}).skb.preview(),\n",
-    "    ],\n",
-    "    how=\"horizontal\",\n",
-    ").tail(24 * 7)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77e0f78e",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Now, we plot the observed values and the predicted median with a line. In addition,\n",
-    "we plot the 5th and 95th percentiles as a shaded area. It means that between those\n",
-    "two bounds, we expect to find 90% of the observed values.\n",
-    "\n",
-    "We plot this information on a portion of the training data to observe the uncertainty\n",
-    "quantification of the predictions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a727af25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "median_chart = (\n",
-    "    altair.Chart(results)\n",
-    "    .transform_fold([target_column_name, \"median\"])\n",
-    "    .mark_line(tooltip=True)\n",
-    "    .encode(x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\")\n",
-    ")\n",
-    "\n",
-    "# Add a column for the band legend\n",
-    "results_with_band = results.with_columns(pl.lit(\"90% interval\").alias(\"band_type\"))\n",
-    "\n",
-    "quantile_band_chart = (\n",
-    "    altair.Chart(results_with_band)\n",
-    "    .mark_area(opacity=0.4, tooltip=True)\n",
-    "    .encode(\n",
-    "        x=\"prediction_time:T\",\n",
-    "        y=\"quantile_05:Q\",\n",
-    "        y2=\"quantile_95:Q\",\n",
-    "        color=altair.Color(\"band_type:N\", scale=altair.Scale(range=[\"lightgreen\"])),\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "combined_chart = quantile_band_chart + median_chart\n",
-    "combined_chart.resolve_scale(color=\"independent\").interactive()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c48e5389",
-   "metadata": {},
-   "source": [
-    "\n",
-    "While we should expend this plot on the test data and on several portions of the\n",
-    "dataset, we observe a potential interesting pattern: during the week days, the\n",
-    "5th percentile is further from the median than during the weekend. However, for the\n",
-    "95th percentile, the opposite is observed.\n",
     "\n",
     "### Evaluation via cross-validation\n",
     "\n",
@@ -259,17 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a23f512",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bc8990c",
+   "id": "d875a967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "057faa62",
+   "id": "9906c96a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,60 +227,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b87a9d72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_results_hgbr_05[\n",
-    "    [col for col in cv_results_hgbr_05.columns if col.startswith(\"test_\")]\n",
-    "].mean(axis=0).round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebcd40e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_results_hgbr_50[\n",
-    "    [col for col in cv_results_hgbr_50.columns if col.startswith(\"test_\")]\n",
-    "].mean(axis=0).round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40fa7081",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv_results_hgbr_95[\n",
-    "    [col for col in cv_results_hgbr_95.columns if col.startswith(\"test_\")]\n",
-    "].mean(axis=0).round(3)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "731a8721",
+   "id": "28157301",
    "metadata": {},
    "source": [
     "\n",
-    "Focusing on the different D2 scores, we observe that each model minimize the D2 score\n",
-    "associated to the target quantile that we set. For instance, the model predicting the\n",
-    "5th percentile obtained the highest D2 pinball score with `alpha=0.05`. It is expected\n",
-    "but a confirmation of what loss each model minimizes.\n",
-    "\n",
-    "Now, let's collect the cross-validated predictions and plot the residual vs predicted\n",
-    "values for the different models."
+    "Let's first collect all the cross-validated predictions to make further inspection."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e90b79f8",
+   "id": "15ca58b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,9 +254,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29b51b5a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Now, let's make a plot of the predictions for each model and thus we need to gather\n",
+    "all the predictions in a single dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab9df57d",
+   "id": "bad0b1c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pl.concat(\n",
+    "    [\n",
+    "        cv_predictions_hgbr_05[0].rename({\"predicted_load_mw\": \"predicted_load_mw_05\"}),\n",
+    "        cv_predictions_hgbr_50[0].select(\"predicted_load_mw\").rename(\n",
+    "            {\"predicted_load_mw\": \"predicted_load_mw_50\"}\n",
+    "        ),\n",
+    "        cv_predictions_hgbr_95[0].select(\"predicted_load_mw\").rename(\n",
+    "            {\"predicted_load_mw\": \"predicted_load_mw_95\"}\n",
+    "        ),\n",
+    "    ],\n",
+    "    how=\"horizontal\",\n",
+    ").tail(24 * 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52b59dcb",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Now, we plot the observed values and the predicted median with a line. In addition,\n",
+    "we plot the 5th and 95th percentiles as a shaded area. It means that between those\n",
+    "two bounds, we expect to find 90% of the observed values.\n",
+    "\n",
+    "We plot this information on a portion of the test data from the first fold of the\n",
+    "cross-validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d0934e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "median_chart = (\n",
+    "    altair.Chart(results)\n",
+    "    .transform_fold([\"load_mw\", \"predicted_load_mw_50\"])\n",
+    "    .mark_line(tooltip=True)\n",
+    "    .encode(x=\"prediction_time:T\", y=\"value:Q\", color=\"key:N\")\n",
+    ")\n",
+    "\n",
+    "# Add a column for the band legend\n",
+    "results_with_band = results.with_columns(pl.lit(\"90% interval\").alias(\"band_type\"))\n",
+    "\n",
+    "quantile_band_chart = (\n",
+    "    altair.Chart(results_with_band)\n",
+    "    .mark_area(opacity=0.4, tooltip=True)\n",
+    "    .encode(\n",
+    "        x=\"prediction_time:T\",\n",
+    "        y=\"predicted_load_mw_05:Q\",\n",
+    "        y2=\"predicted_load_mw_95:Q\",\n",
+    "        color=altair.Color(\"band_type:N\", scale=altair.Scale(range=[\"lightgreen\"])),\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "combined_chart = quantile_band_chart + median_chart\n",
+    "combined_chart.resolve_scale(color=\"independent\").interactive()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b6b3cf3",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Now, we can inspect the cross-validated metrics for each model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4efee2d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results_hgbr_05[\n",
+    "    [col for col in cv_results_hgbr_05.columns if col.startswith(\"test_\")]\n",
+    "].mean(axis=0).round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40ecfcd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results_hgbr_50[\n",
+    "    [col for col in cv_results_hgbr_50.columns if col.startswith(\"test_\")]\n",
+    "].mean(axis=0).round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da84b8d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_results_hgbr_95[\n",
+    "    [col for col in cv_results_hgbr_95.columns if col.startswith(\"test_\")]\n",
+    "].mean(axis=0).round(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ba8f290",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Focusing on the different D2 scores, we observe that each model minimize the D2 score\n",
+    "associated to the target quantile that we set. For instance, the model predicting the\n",
+    "5th percentile obtained the highest D2 pinball score with `alpha=0.05`. It is expected\n",
+    "but a confirmation of what loss each model minimizes.\n",
+    "\n",
+    "Now, let's collect the cross-validated predictions and plot the residual vs predicted\n",
+    "values for the different models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33e0da1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb049802",
+   "id": "52d510e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc273426",
+   "id": "cf10d77f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca837f3e",
+   "id": "3076f388",
    "metadata": {},
    "source": [
     "\n",
@@ -442,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b13ef69",
+   "id": "7c109ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b08d85a0",
+   "id": "01d3291f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd1192cc",
+   "id": "95680584",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -509,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "779d1222",
+   "id": "fc378d20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f78069b8",
+   "id": "13e1e7ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fd5c09",
+   "id": "009b89e1",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a68da1e0",
+   "id": "0483792c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65194f75",
+   "id": "3a8e12b7",
    "metadata": {},
    "source": [
     "\n",
@@ -586,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "568b262c",
+   "id": "1b36e806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e261cae",
+   "id": "f87ad281",
    "metadata": {},
    "source": [
     "\n",
@@ -611,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41842ede",
+   "id": "893ce6e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25266bde",
+   "id": "bf9c0260",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "208cf495",
+   "id": "c9cf74d3",
    "metadata": {},
    "source": [
     "\n",
@@ -656,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e24645d9",
+   "id": "e8de7d26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc79659a",
+   "id": "1f3cc328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "470b4f4f",
+   "id": "867bc054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dab0017b",
+   "id": "ecda12d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6461a3f",
+   "id": "c78eed3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2051d388",
+   "id": "6ab35348",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -735,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e6381ac",
+   "id": "965b7b2e",
    "metadata": {},
    "source": [
     "\n",
@@ -773,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839b6393",
+   "id": "98c8c9f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf00e186",
+   "id": "cd4373e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3841ae09",
+   "id": "d8877dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b67f6faa",
+   "id": "7693f716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf982e5",
+   "id": "2a0afbd2",
    "metadata": {
     "title": "[markdown"
    },
@@ -972,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d846a2",
+   "id": "caf1f944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad606d0",
+   "id": "2687c90f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cf2edcc",
+   "id": "ec350d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8893f25",
+   "id": "c8bfe023",
    "metadata": {},
    "source": [
     "\n",
@@ -1024,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebcc87a3",
+   "id": "8a37b936",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1e77456",
+   "id": "8504e057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fea0002",
+   "id": "b1feba03",
    "metadata": {},
    "outputs": [],
    "source": [
