--- a/_sources/content/notebooks/single_horizon_prediction.ipynb
+++ b/_sources/content/notebooks/single_horizon_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bfacf6bc",
+   "id": "87184de6",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e0c4cbd",
+   "id": "a70ff1f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295a8da4",
+   "id": "c0bf6574",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -38,9 +38,10 @@
    "source": [
     "import warnings\n",
     "\n",
-    "import skrub\n",
     "import altair\n",
     "import cloudpickle\n",
+    "import pyarrow  # noqa: F401\n",
+    "import skrub\n",
     "from plotly.io import write_json, read_json  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import (\n",
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68dddcf8",
+   "id": "e11a2381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc5f867",
+   "id": "2ad97994",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c986982",
+   "id": "7d5ef4c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "083c0de6",
+   "id": "7d2a3f49",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef80b6d5",
+   "id": "788c33d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5b4569a",
+   "id": "26a6274a",
    "metadata": {},
    "source": [
     "\n",
@@ -184,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1575da5f",
+   "id": "a677f914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ab1b2c4",
+   "id": "838ef8b9",
    "metadata": {},
    "source": [
     "\n",
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3faee4d0",
+   "id": "d9a1180c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0bf3fad",
+   "id": "d4727112",
    "metadata": {},
    "source": [
     "\n",
@@ -225,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5e03bf4",
+   "id": "9e9388fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4138e77",
+   "id": "60a4f49b",
    "metadata": {},
    "source": [
     "\n",
@@ -272,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4776c025",
+   "id": "d095e879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e611f3e8",
+   "id": "20ac4b8a",
    "metadata": {},
    "source": [
     "\n",
@@ -332,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e73c935",
+   "id": "37f860a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d705717",
+   "id": "9a36bc25",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -387,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "014c2593",
+   "id": "13caefef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0c1a28",
+   "id": "88b04872",
    "metadata": {},
    "source": [
     "\n",
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e4765bf",
+   "id": "33141edd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9a8ec2e",
+   "id": "0f279e98",
    "metadata": {},
    "source": [
     "\n",
@@ -442,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3567b32a",
+   "id": "4d1efe66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4afe8ae",
+   "id": "8d2dd798",
    "metadata": {},
    "source": [
     "\n",
@@ -481,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4932445",
+   "id": "7c2b03ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04dcfd2",
+   "id": "9d3228ca",
    "metadata": {},
    "source": [
     "\n",
@@ -510,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3f2c042",
+   "id": "9fc1b8ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dddaecc8",
+   "id": "3e8c18a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62ad06b0",
+   "id": "0a68d6e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8da6c7",
+   "id": "caaf4add",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df8c62d7",
+   "id": "2a9e5c28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c8b127",
+   "id": "668cc374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c009a012",
+   "id": "b6ba49ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13824c4f",
+   "id": "ba732373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c19699",
+   "id": "8773b11a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -661,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aff2ce06",
+   "id": "9fa8dd1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f47215",
+   "id": "b5fe9ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44489b5",
+   "id": "8fd66f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93539db",
+   "id": "7fc8b4ef",
    "metadata": {},
    "source": [
     "\n",
@@ -740,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "075ea04e",
+   "id": "944913e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e4ccd6c",
+   "id": "0454a277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de4116bb",
+   "id": "b8031e38",
    "metadata": {},
    "source": [
     "Do a sanity check by plotting the observed values and predictions for the first fold\n",
@@ -794,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e88f3fc5",
+   "id": "06743f7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08bd79ae",
+   "id": "66c99948",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee6948ac",
+   "id": "bd15c210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b85db1c8",
+   "id": "8c17671a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d6c872a",
+   "id": "b59c2850",
    "metadata": {},
    "source": [
     "\n",
@@ -862,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6819df7",
+   "id": "d326f00c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d32cde6",
+   "id": "9c4d165c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1ef70d3",
+   "id": "871c1d06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e409049a",
+   "id": "5797b521",
    "metadata": {},
    "source": [
     "\n",
@@ -916,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1745238",
+   "id": "369134f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc0175d",
+   "id": "8c59b5f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a40681be",
+   "id": "4fd2f29e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d18e9a00",
+   "id": "75020c82",
    "metadata": {},
    "source": [
     "\n",
@@ -972,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f3b03ac",
+   "id": "61bab3ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b510fd8e",
+   "id": "99689f56",
    "metadata": {},
    "outputs": [],
    "source": [
