--- a/jupyterlite/files/notebooks/single_horizon_prediction.ipynb
+++ b/jupyterlite/files/notebooks/single_horizon_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20e2a4dd",
+   "id": "e998f858",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3bbd73",
+   "id": "863d2c96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5dc11e6",
+   "id": "66837c3c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -38,9 +38,10 @@
    "source": [
     "import warnings\n",
     "\n",
-    "import skrub\n",
     "import altair\n",
     "import cloudpickle\n",
+    "import pyarrow  # noqa: F401\n",
+    "import skrub\n",
     "from plotly.io import write_json, read_json  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import (\n",
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff2eed2",
+   "id": "f01478c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39248bec",
+   "id": "d000407c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -91,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0501fb75",
+   "id": "01cc4363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9048a4b5",
+   "id": "7c938567",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df54858e",
+   "id": "0c395e49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e59547cb",
+   "id": "3f570fd8",
    "metadata": {},
    "source": [
     "\n",
@@ -184,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df35b825",
+   "id": "aeaee545",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3599f9e",
+   "id": "3784858a",
    "metadata": {},
    "source": [
     "\n",
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfd362b0",
+   "id": "9bb06fca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c95dba2",
+   "id": "59ca23ec",
    "metadata": {},
    "source": [
     "\n",
@@ -225,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "701d6abb",
+   "id": "7e39bcfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49b8e301",
+   "id": "7c331f70",
    "metadata": {},
    "source": [
     "\n",
@@ -272,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cdc1a1e",
+   "id": "8342a8a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d8a20d",
+   "id": "1824f5fa",
    "metadata": {},
    "source": [
     "\n",
@@ -332,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e619366",
+   "id": "a6dec338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18333528",
+   "id": "b0947fb4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -387,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e34b36e4",
+   "id": "fa9c52e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "688b15a7",
+   "id": "4b755ee6",
    "metadata": {},
    "source": [
     "\n",
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9e0bb3",
+   "id": "735181e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5046f79e",
+   "id": "3d6d5655",
    "metadata": {},
    "source": [
     "\n",
@@ -442,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a5c3ab",
+   "id": "aa06c06f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2387d098",
+   "id": "aa8d21b6",
    "metadata": {},
    "source": [
     "\n",
@@ -481,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d435c46c",
+   "id": "cbc512b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f7c7abf",
+   "id": "6937b912",
    "metadata": {},
    "source": [
     "\n",
@@ -510,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a52bac32",
+   "id": "166ce34a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9439e44a",
+   "id": "f9eab97d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b4907c9",
+   "id": "6effee04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f67026ae",
+   "id": "d8bbce5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86e48a41",
+   "id": "340b19ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9ba6862",
+   "id": "4d558ba4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03910307",
+   "id": "ee33be2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a2186b",
+   "id": "085f5708",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed2d00b7",
+   "id": "67435d15",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -661,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53c23486",
+   "id": "b4c7d97c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0db3af11",
+   "id": "f5057a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a563a727",
+   "id": "b4b3d27c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b29b5f1",
+   "id": "77df3204",
    "metadata": {},
    "source": [
     "\n",
@@ -740,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eca660f",
+   "id": "2da7d8d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372f4e09",
+   "id": "dc576f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfb3e4f1",
+   "id": "fec3aad6",
    "metadata": {},
    "source": [
     "Do a sanity check by plotting the observed values and predictions for the first fold\n",
@@ -794,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "140ee6e6",
+   "id": "098fb47c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fea89a3",
+   "id": "e93a72bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13c4f0c8",
+   "id": "3682986c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399f7b12",
+   "id": "346f83fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e7eb3f",
+   "id": "c84db953",
    "metadata": {},
    "source": [
     "\n",
@@ -862,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6aa4718",
+   "id": "cf11c196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b311cd2",
+   "id": "0b6f5593",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5178ba6",
+   "id": "2423eb76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7303f055",
+   "id": "09d423e0",
    "metadata": {},
    "source": [
     "\n",
@@ -916,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc2b734",
+   "id": "a525d2e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "799e2793",
+   "id": "920428e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112a2bf4",
+   "id": "1e0ff166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c61ccff",
+   "id": "01f96e41",
    "metadata": {},
    "source": [
     "\n",
@@ -972,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064c5ee4",
+   "id": "ff98805b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c035771f",
+   "id": "e0d9c8ba",
    "metadata": {},
    "outputs": [],
    "source": [
